--- a/Auction Management System Project/Auction Management System Project.csproj
+++ b/Auction Management System Project/Auction Management System Project.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Oracle.DataAccess, Version=2.112.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>D:\app\lTAHE\product\11.2.0\dbhome_1\ODP.NET\bin\2.x\Oracle.DataAccess.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -95,6 +99,9 @@
     <Compile Include="Forms\DisconnectedMode\WatchlistForm.Designer.cs">
       <DependentUpon>WatchlistForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\ConnectedMode\BidManagementForm.resx">
+      <DependentUpon>BidManagementForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
