--- a/Auction Management System Project/Auction Management System Project.csproj
+++ b/Auction Management System Project/Auction Management System Project.csproj
@@ -99,6 +99,9 @@
     <Compile Include="Forms\DisconnectedMode\WatchlistForm.Designer.cs">
       <DependentUpon>WatchlistForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\DisconnectedMode\WatchlistForm.resx">
+      <DependentUpon>WatchlistForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
