--- a/Auction Management System Project/Auction Management System Project.csproj
+++ b/Auction Management System Project/Auction Management System Project.csproj
@@ -105,6 +105,12 @@
     <EmbeddedResource Include="Forms\ConnectedMode\BidManagementForm.resx">
       <DependentUpon>BidManagementForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\DisconnectedMode\UserDashboardForm.resx">
+      <DependentUpon>UserDashboardForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\DisconnectedMode\WatchlistForm.resx">
+      <DependentUpon>WatchlistForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
